<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="48dp"
    tools:context=".FourthNoConstraintFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/constraint_facebook_image_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:src="@drawable/facebook"/>

        <EditText
            android:id="@+id/constraint_login_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="18sp"
            android:theme="@style/edit_text_style" />

        <EditText
            android:id="@+id/constraint_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:theme="@style/edit_text_style"/>

        <Button
            android:id="@+id/constraint_button_enter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/enter_label"
            android:textAllCaps="false"
            android:textColor="@color/alpha_white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/constraint_forgot_password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:lines="2"
            android:text="@string/forgot_password_label"
            android:textColor="@color/dark_blue"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>

</FrameLayout>