<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="48dp"
    tools:context=".FourthConstraintFragment">

    <ImageView
        android:id="@+id/constraint_facebook_image_view"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/facebook"
        app:layout_constraintBottom_toTopOf="@+id/constraint_login_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/constraint_login_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="18sp"
        android:theme="@style/edit_text_style"
        app:layout_constraintBottom_toTopOf="@+id/constraint_password_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_facebook_image_view" />

    <EditText
        android:id="@+id/constraint_password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:theme="@style/edit_text_style"
        app:layout_constraintBottom_toTopOf="@+id/constraint_button_enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_login_edit_text" />

    <Button
        android:id="@+id/constraint_button_enter"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/enter_label"
        android:textAllCaps="false"
        android:textColor="@color/alpha_white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraint_forgot_password_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_password_edit_text" />

    <TextView
        android:id="@+id/constraint_forgot_password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:lines="2"
        android:text="@string/forgot_password_label"
        android:textColor="@color/dark_blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/constraint_facebook_image_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/constraint_facebook_image_view"
        app:layout_constraintTop_toBottomOf="@+id/constraint_button_enter" />

</androidx.constraintlayout.widget.ConstraintLayout>